# LLMTrader

./: --symbol  .dockerignore  .gitignore  AGENTS.md  Dockerfile  GeneratedStrategy_strategy.py  MacdStrategy_strategy.py  README.md  alembic.ini  alpha_lab_portfolio.json  alpha_lab_portfolio_v2.json  alpha_lab_trend_legs.json  audit_log_BTCUSDT_266806.json  audit_log_BTCUSDT_266952.json  audit_log_BTCUSDT_267844.json  audit_log_BTCUSDT_268031.json  audit_log_BTCUSDT_268775.json  audit_log_BTCUSDT_285718.json  audit_log_BTCUSDT_286520.json  audit_log_BTCUSDT_286885.json  audit_log_BTCUSDT_287669.json  audit_log_BTCUSDT_287766.json  audit_log_BTCUSDT_287900.json  audit_log_BTCUSDT_288463.json  audit_log_BTCUSDT_288471.json  audit_log_BTCUSDT_288778.json  audit_log_BTCUSDT_289057.json  audit_log_BTCUSDT_312884.json  audit_log_BTCUSDT_314123.json  audit_log_BTCUSDT_335735.json  audit_log_BTCUSDT_336986.json  auto_tp_sl_manager_strategy.py  binance history .csv  check_redis.py  development_plan.md  docker-compose.override.yml  docker-compose.yml  eth_consistency_report.json  generated_strategy.py  indicator_strategy_template.py  (+30 more)
.azure/: deployment-plan.md
.github/: copilot-instructions.md
.github/workflows/: autotrader-AutoDeployTrigger-44d254ef-86c3-4f1e-ac6e-38003dbc16d7.yml  autotrader-AutoDeployTrigger-ad5e6c2c-01b9-44f9-b11c-1ecea9218173.yml  autotrader-AutoDeployTrigger-b9a0d998-a012-43ae-a294-4f220a2e3051.yml  check-container-drift.yml  ci-migration-guard.yml  ci.yml  cleanup-pending-column-drops.yml  compute-funding-stats.yml  deploy-api-test.yml  deploy-main.yml  deploy-oi-ingestor-test.yml  deploy-perp-meta-ingestor-test.yml  deploy-relay-dev.yml  deploy-runner-test-backtest.yml  deploy-runner-test-live.yml  deploy-runner-test.yml  deploy-web-test.yml  ingest-funding-rates.yml  llmtrader-api-AutoDeployTrigger-51b80701-055a-457e-a751-7ca8a724937c.yml  llmtrader-runner-AutoDeployTrigger-fce05b31-a5b9-45c7-af61-c1fa39994159.yml  rotate-auth-secrets.yml  rotate-entra-secret.yml  sync-mac-minsuk-to-main.yml  web-ci.yml
data/: sample_btc_1m.csv  trade_history.csv
docs/: azure-tickers-cache.md  azure_time_sync.md  donchian-breakout-triple-alpha.md  feature-proposals.md  multi-factor-portfolio-alpha.md  multi-symbol-strategy-operations.md  oi-capitulation-bottom-alpha.md  phase_5_test_report.md  relay_server_api.md  strategy-parameter-panel-plan.md  subaccount-topology.md
infra/: Dockerfile.api  Dockerfile.oi_ingestor  Dockerfile.perp_meta_ingestor  Dockerfile.relay  Dockerfile.runner  Dockerfile.web  README.md  runbook-pg-autostart.ps1  ticker-ingest-logic-app.json
infra/docs/: fdpo-test-azure-rebuild-runbook.md  oi-ingestor-deployment.md  perp-meta-ingestor-deployment.md  relay-azure-portal-deploy-guide.md  relay-container-apps.md  saas-proxy-access.md  scaling-architecture-guide.md
pages/: 1_🤖_전략_생성.py  2_📊_백테스트.py  2_🤖_전략생성.py  3_📉_페이퍼_트레이딩.py  3_📊_백테스트.py  4_🔴_라이브_트레이딩.py
relay/: __init__.py  auth.py  azure_openai.py  capability_registry.py  config.py  main.py  prompts.py  strategy_dsl.py  strategy_postprocess.py  token_budget_manager.py  url_fetcher.py
scripts/: AGENTS.md  _alpha_screening.md  _analyze_oi_sweep.py  _check_live_job.py  _diag_mfp_2026_05_22_close.py  _diag_mfp_2026_05_22_close_v2.py  _diag_mfp_freeze.py  _diag_mfp_gapfill.py  _diag_mfp_lifecycle_events.py  _filter_robust.py  _funding_alpha_3y_monthly_summary.md  _funding_alpha_6y_results.jsonl  _funding_alpha_6y_summary.md  _funding_alpha_oos_results.jsonl  _funding_alpha_oos_summary.md  _inspect_mfp_parquet.py  _inspect_micro.py  _iter1_log.txt  _iter23_log.txt  _iter4_log.txt  _micro_iter1_lsr_results.jsonl  _micro_iter1_lsr_summary.md  _micro_iter23_results.jsonl  _micro_iter23_summary.md  _micro_iter4_robust_results.jsonl  _micro_iter4_robust_summary.md  _sweep_funding_3y_log.txt  _sweep_funding_oos_log.txt  _verify_redis_zsets.py  _winner_monthly_36m.py  backfill_vision.py  check_destructive_migrations.py  check_options_chain.py  check_realtime_btcusdt_rsi.py  check_time_sync.py  compute_funding_stats.py  discover_mfp_params.py  doctor.sh  download_sample_data.py  generate_strategy.py  (+53 more)
scripts/strategies/: 2010trading_strategy.py  _ou_barriers.py  abcd_2_strategy.py  adaptive_oos_fractional_portfolio_strategy.py  adx_trend_long_strategy.py  amutrading_strategy.py  atr_breakout_long_strategy.py  atr_trend_confluence_long_strategy.py  auto_tp_sl_manager_strategy.py  (+63 more)
src/: settings.py
tests/: __init__.py  conftest.py  test_account_snapshot.py  test_backtest_sweep.py  test_binance_client.py  test_capital_allocator.py  test_capital_router.py  test_flip_reentry.py  test_health.py  test_kimp_neutral.py  test_kimp_neutral_backtest.py  test_kimp_neutral_engine.py  test_kimp_paper_portfolio.py  test_live_wallet_routing.py  test_manual_live_order_helpers.py  test_options_symbol.py  test_portfolio_context_position.py  test_settings.py  test_status.py  test_transfers_api.py  test_verify_strategy.py  test_wallet_reconciler.py
web/: .env.example  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
(+358 files in other folders)
