[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmtrader"
version = "0.1.0"
description = "LLM 기반 바이낸스 선물 자동 트레이딩 시스템"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "LLMTrader Team" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "typing-extensions>=4.12.0",
    "python-dotenv>=1.0.1",
    "typer>=0.12.0",
    "streamlit>=1.30.0",
    "plotly>=5.0.0",
    "pandas>=2.0.0",
    "pandas-ta>=0.3.14b0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "black>=24.8.0",
    "mypy>=1.9.0",
]

[project.urls]
homepage = "https://github.com/minsuk/LLMTrader"


[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "S", "PL", "Q"]
ignore = ["PLR2004", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_any_generics = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict_equality = true
check_untyped_defs = true
plugins = []


