[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmtrader"
version = "0.1.0"
description = "바이낸스 선물 자동 트레이딩 시스템"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "LLMTrader Team" }]
dependencies = [
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "typing-extensions>=4.12.0",
    "python-dotenv>=1.0.1",
    "typer>=0.12.0",
    "streamlit>=1.30.0",
    "plotly>=5.0.0",
    "numpy>=1.26.0",
    "TA-Lib>=0.4.28",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "greenlet>=3.0.3",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "cryptography>=43.0.0",
    "stripe>=11.0.0",
    "azure-storage-blob>=12.20.0",
    "azure-keyvault-keys>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "black>=24.8.0",
    "mypy>=1.9.0",
]
relay = [
    "azure-identity>=1.15.0",
    "openai>=1.12.0",
]

[project.urls]
homepage = "https://github.com/minsuk/LLMTrader"


[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "S", "PL", "Q"]
ignore = ["PLR2004", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_any_generics = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict_equality = true
check_untyped_defs = true
plugins = []
